--- a/package.json
+++ b/package.json
@@ -10,9 +10,28 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "@mdi/font": "^5.9.55",
+        "axios": "^0.21.1",
+        "bootstrap": "^4.6.0",
+        "deepmerge": "^4.2.2",
+        "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "popper.js": "^1.16.1",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.34.1",
+        "sass-loader": "^11.1.1",
+        "vue": "^2.6.12",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@websanova/vue-auth": "^2.21.14-beta",
+        "es6-promise": "^4.2.8",
+        "vue-axios": "^3.2.4",
+        "vue-nl2br": "^0.1.2",
+        "vue-progressbar": "^0.7.5",
+        "vue-router": "^3.5.1",
+        "vuetify": "^2.5.3"
     }
 }
