--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "sass": "^1.34.1",
         "sass-loader": "^11.1.1",
         "vue": "^2.6.12",
+        "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
@@ -32,6 +33,7 @@
         "vue-nl2br": "^0.1.2",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.5.1",
+        "vuelidate": "^0.7.6",
         "vuetify": "^2.5.3"
     }
 }
